# zGL

./: CMakeLists.txt  camera.cpp  camera.h  color.h  contentManager.cpp  contentManager.h  glad.c  graphicsDevice.cpp  graphicsDevice.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  presentationParameters.cpp  presentationParameters.h  primitiveBuilder.cpp  primitiveBuilder.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  timer.cpp  timer.h  tiny_obj_loader.h  vertex.h  zGL.sln  zGL.vcxproj  zGL.vcxproj.filters  zviewport.cpp  zviewport.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
